--- a/biome.json
+++ b/biome.json
@@ -33,6 +33,9 @@
 			"suspicious": {
 				"noExplicitAny": "off",
 				"noEmptyInterface": "off"
+			},
+			"correctness": {
+				"useJsxKeyInIterable": "off"
 			}
 		},
 		"ignore": [
